# rooms

./: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: app.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/lobby/: Cargo.toml
crates/lobby/src/: app.rs  main.rs
crates/relay/: Cargo.toml
crates/relay/src/: app.rs  main.rs
