[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
simple_logger = { version = "4.0", default-features = false, features = ["timestamps"] }
log = { version = "0.4" }
smol = { version = "1.3" }
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3.1"
laminar = "0.5"